2005-01-13  Earnie Boyd  <earnie@users.sf.net>

	* include/sys/stat.h (_S_IFLNK, S_IFLNK, _S_ISLNK, S_ISLNK, _lstat,
	lstat): Remove.
	* include/errno.h (ELOOP): Ditto.
	* include/_mingw.h: Increment version to 3.7.
	* Makefile.in: Ditto.

2005-01-11  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/tchar.h (_tfreopen): Add UNICODE mappings.

2005-01-11  Earnie Boyd  <earnie@users.sf.net>

	* include/sys/stat.h (_S_IFLNK, S_IFLNK, _S_ISLNK, S_ISLNK, _lstat,
	lstat): Conditionalize defines for __STRICT_ANSI__.

2005-01-10  Earnie Boyd  <earnie@users.sf.net>

	* include/errno.h (ELOOP): Add definition.

2005-01-10  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/complex/(cabsl.c cacosl.c cacoshl.c cargl.c casinl.c
	casinhl.c catanl.c catanhl.c ccosl.c ccoshl.c cexpl.c cimagl.c
	clogl.c cpowl.c cprojl.c creall.c csinl.c csinhl.c csqrtl.c
	ctanl.c ctanhl.c): New files.
	* mingwex/Makefile.in (COMPLEX_DISTFILES): Adjust.
	(COMPLEX_OBJS): Adjust. 
	* include/complex.h (cabsl, cacosl, cacoshl, cargl, casinf. 
	casinhl, catanl, catanhl, ccosl, ccoshl, cexpl, cimagl, clogl,
	cpowl, cprojl, creall, csinl, csinhl, csqrtl, ctanl, ctanhl):
	Declare.

2005-01-06  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/_mingw.h (__int16): Define as short.
	Thanks to: Leo Yuriev  <leoyuriev at users dot sf dot net>

2005-01-06  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdio.h (P_tmpdir): Add define.

2005-01-03  Earnie Boyd  <earnie@users.sf.net>

	* Makefile.in (inst_docdir): For Cygwin target set to share/doc/.

2005-01-02  Earnie Boyd  <earnie@users.sf.net>

	* include/_mingw.h: Increment version to 3.6
	* Makefile.in: Ditto

2004-12-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/complex/(cabsf.c cacosf.c cacoshf.c cargf.c casinf.c
	casinhf.c catanf.c catanhf.c ccosf.c ccoshf.c cexpf.c cimagf.c
	clogf.c cpowf.c cprojf.c crealf.c csinf.c csinhf.c csqrtf.c
	ctanf.c ctanhf.c): New files.