@@ -1,3 +1,9 @@
+2005-01-17  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/sys/stat.h (struct __stat64): Change st_size type to
+	 __int64.
+	* include/wchar.h (struct __stat64): Change st_size type to __int64.
+
 2005-01-13  Earnie Boyd  <earnie@users.sf.net>
 
 	* include/sys/stat.h (_S_IFLNK, S_IFLNK, _S_ISLNK, S_ISLNK, _lstat,
